# xxhash-node-cmake-js

./: .gitignore  CMakeLists.txt  README.md  index.js  package.json
src/: node_xxhash_mod.cc  node_xxhash_mod.h
test/: index.js
util/: CMakeLists-abstract.txt
